plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'idea'
    id "org.sonarqube" version "${sonarqubeVersion}"
    id "jacoco"
}
bootJar {
    enabled = false
}

allprojects {
    apply plugin: 'java'

    group = 'info.touret.bookstore'
    version = '0.0.1-SNAPSHOT'
    compileJava {
        options.compilerArgs.add("--enable-preview")
    }
    compileTestJava {
        options.compilerArgs.add("--enable-preview")
    }

    repositories {
        mavenCentral()
    }

    test {
        useJUnitPlatform()
        jvmArgs("--enable-preview")
    }

}

subprojects {

    apply plugin: 'idea'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.sonarqube'

    sourceCompatibility = '17'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }
    dependencies {
	    implementation 'org.springframework.boot:spring-boot-starter-webflux'
	    testImplementation 'org.springframework.boot:spring-boot-starter-test'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
	    testImplementation 'io.projectreactor:reactor-test'
    }
     bootJar {
            enabled = true
        }

        jacocoTestReport {
            reports {
                xml.enabled true
            }
        }

        sonarqube{
            properties{
                property "sonar.jacoco.reportPath", "$buildDir/jacoco/test.exec"
                property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
            }
        }

}

project(':rest-book'){
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
        implementation 'io.r2dbc:r2dbc-postgresql:0.8.12.RELEASE'
        implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
        testImplementation 'io.r2dbc:r2dbc-h2'
        testImplementation 'io.projectreactor:reactor-test'
    }
}
project(':rest-number') {
    dependencies {
        implementation 'com.github.javafaker:javafaker:1.0.2'
        implementation 'org.yaml:snakeyaml:1.29'
    }
}
